wellesleynet/roles/k8s/files/joplin-webdav.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: joplin-webdav
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joplin-webdav
  serviceName: "joplin-webdav"
  template:
    metadata:
      labels:
        app: joplin-webdav
    spec:
      containers:
      - image: httpd:2.4.43-alpine
        imagePullPolicy: Always
        name: joplin
        ports:
        - containerPort: 80
        volumeMounts:
        - name: joplin-data
          mountPath: /usr/local/apache2/htdocs
        - name: joplin-conf
          mountPath: /usr/local/apache2/conf
        livenessProbe:
          exec:
            command:
            - ls
            - /usr/local/apache2/htdocs/lost+found
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: joplin-data
        persistentVolumeClaim:
          claimName: joplin-webdav
      - name: joplin-conf
        projected:
          sources:
          - secret:
              name: joplin-webdav
          - configMap:
              name: joplin-webdav

---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: joplin-webdav
spec:
  selector:
    app: joplin-webdav
  ports:
  - name: joplin
    port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joplin-webdav
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
    nginx.ingress.kubernetes.io/client-body-buffer-size: 16m
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: joplin-webdav.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: joplin-webdav
            port:
              number: 80
  tls:
  - hosts:
    - joplin-webdav.kiski.co
    secretName: joplin-webdav-kiski-co-tls
